--- a/content.css
+++ b/content.css
@@ -1,14 +1,13 @@
-
 .ss {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, Helvetica, sans-serif;
     position: absolute;
     display: block;
     width: 660px;
     height: 450px;
-    background-color: white;
+    background-color: #eee;
     border: 1px solid #ccc;
     /* padding: 10px; */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.5);
     z-index: 9999;
     overflow: hidden
 }
@@ -42,6 +41,7 @@
 
 .ss .link-title {
     font-size: 16px;
+    line-height: 16px;
     font-weight: bold;
     text-decoration: none;
     color: #333;
@@ -49,7 +49,9 @@
 }
 
 .ss .link-domain {
+    display: block;
     font-size: 12px;
+    /* padding-top: 3px; */
     color: #999;
 }
 
@@ -92,25 +94,28 @@
 
 .ss .top-bar {
     width: 100%;
-    height: 24px;
-    background-color: #a8a8a8;
+    height: 32px;
+    background-color: #555;
     cursor: move;
 }
 
 .ss .close-tooltip {
     position: relative;
+    color: white;
     border: none;
-    font-size: 15px;
+    font-size: 19px;
     cursor: pointer;
     float: right;
     line-height: 24px;
+    margin-top:4px;
+    margin-right:4px;
+    width: 24px;
+    height: 24px;
     text-align: center;
-    background: transparent;
+    /* background: black; */
+    /* border: 1px solid black; */
     /* border-radius: 50%; */
-    /* width: 24px; */
-    /* height: 24px; */
-    /* background: gray; */
-    /* color: white; */
+    padding: 0;
 }
 
 .ss .close-tooltip:focus {
@@ -128,8 +133,6 @@
 
 .ss .carousel-content {
     width: 100%;
-    font-size: 16px;
-    font-style: italic;
     display: flex;
     transition: transform 0.3s ease;
     padding-top: 10px 20px 10px 20px;
@@ -139,6 +142,9 @@
 
 .ss .carousel-item {
     flex-shrink: 0;
+    font-size: 16px;
+    font-style: italic;
+    line-height: 20px;
     width: calc(100% - 60px);
     margin-right: 30px;
     margin-left: 30px;
@@ -161,7 +167,7 @@
 }
 
 .ss .carousel-button {
-    background-color: transparent;
+    background-color: white;
     border: none;
     cursor: pointer;
     font-size: 16px;
@@ -169,18 +175,31 @@
     top: 50%;
     transform: translateY(-50%);
     z-index: 2;
+    color: black;
+    border: 1px solid black;
+    padding: 0px;
+    height: 24px;
+    width: 16px;
+    line-height: 24px;
+    text-align: center;
+}
+
+/* disabled button styling */
+.ss .carousel-button:disabled {
+    background-color: #eee;
+    color: #9c9c9c;
+    border: 1px solid #9c9c9c;
+    cursor: default;
 }
 
 /* flush left position absolute */
 .ss .carousel-left {
     left: 0px;
-    position: absolute;
 }
 
 /* flush right. position absolute. */
 .ss .carousel-right {
     right: 0px;
-    position: absolute;
 }
 
 .ss .resize-handle {
