Remove dead code. Rename Metaphor -> Exa

--- a/content.css
+++ b/content.css
@@ -102,6 +102,7 @@
 .ss .close-tooltip {
     position: relative;
     color: white;
+    background: black;
     border: none;
     font-size: 19px;
     cursor: pointer;
