--- a/content.css
+++ b/content.css
@@ -9,7 +9,14 @@
     /* padding: 10px; */
     box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.5);
     z-index: 9999;
-    overflow: hidden
+    overflow: hidden;
+    /* Reset inherited properties */
+    margin: 0;
+    padding: 0;
+    color: black;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.4;
 }
 
 .ss .tooltip-wrapper {
@@ -34,6 +41,7 @@
     border-bottom: 2px solid #ccc;
     padding: 10px;
     font-weight: normal;
+    color: black;
 }
 
 .ss .link-title-date-container {
@@ -98,6 +106,7 @@
     height: 32px;
     background-color: #555;
     cursor: move;
+    color: white;
 }
 
 .ss .close-tooltip {
@@ -109,14 +118,11 @@
     cursor: pointer;
     float: right;
     line-height: 24px;
-    margin-top:4px;
-    margin-right:4px;
+    margin: 4px;
+    line-height: 24px;
     width: 24px;
     height: 24px;
     text-align: center;
-    /* background: black; */
-    /* border: 1px solid black; */
-    /* border-radius: 50%; */
     padding: 0;
 }
 
@@ -157,6 +163,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    color: black;
 }
 
 /* animation of a dashed circle rotating */
@@ -178,7 +185,6 @@
 
 .ss .carousel-button {
     background-color: white;
-    border: none;
     cursor: pointer;
     font-size: 16px;
     position: absolute;
@@ -186,7 +192,6 @@
     transform: translateY(-50%);
     z-index: 2;
     color: black;
-    border: 1px solid black;
     padding: 0px;
     height: 24px;
     width: 16px;
@@ -226,6 +231,9 @@
     justify-content: center;
     font-size: 12px;
     font-weight: bold;
+    color: black;
+    line-height: 15px;
+    border: 1px solid #aaa;
 }
 
 @keyframes spin {
