--- a/content.css
+++ b/content.css
@@ -24,14 +24,13 @@
     color: black;
     position: relative;
     overflow-y: auto;
-    max-height: calc(100% - 20px);
+    max-height: calc(100% - 32px);
     width: 100%;
 }
 
 .ss .link-list {
     display: flex;
     flex-direction: column;
-    gap: 15px;
     width: 100%;
 }
 
@@ -39,8 +38,11 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-    border-bottom: 2px solid #ccc;
-    padding: 10px;
+    border-bottom: 1px solid #999;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 16px;
+    padding-bottom: 16px;
     font-weight: normal;
     color: black;
 }
@@ -119,8 +121,8 @@
     cursor: pointer;
     float: right;
     line-height: 32px;
-    width: 24px;
-    height: 24px;
+    width: 32px;
+    height: 32px;
     text-align: center;
     padding: 0;
 }
@@ -136,7 +138,6 @@
     position: relative;
     width: 100%;
     height: 100%;
-    margin-bottom: 10px;
 }
 
 .ss .carousel-content {
@@ -196,6 +197,8 @@
     width: 16px;
     line-height: 24px;
     text-align: center;
+    border: 1px solid black;
+    box-sizing: border-box;
 }
 
 /* hidden button styling */
